--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,13 +6,18 @@ on:
       - main
 
 jobs:
-  build-and-deploy:              # <<-- job ID tumhare diagram ke liye
-    name: Build & Deploy to EC2  # (UI me dikhega)
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Create .env file
+        run: |
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
+          echo "NODE_ENV=production" >> .env
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -33,16 +38,11 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            set -e
             IMAGE=${{ secrets.DOCKER_USERNAME }}/receiptsnap-backend:latest
-            sudo apt-get update && sudo apt-get install -y docker.io
+            sudo apt update && sudo apt install -y docker.io
             sudo systemctl enable docker
             sudo systemctl start docker
             sudo docker pull $IMAGE
             sudo docker stop receiptsnap-backend || true
             sudo docker rm receiptsnap-backend || true
-            sudo docker run -d --name receiptsnap-backend \
-              --restart unless-stopped \
-              -p 3000:3000 \
-              --env-file /var/www/receiptsnap-backend/.env \
-              $IMAGE
+            sudo docker run -d --name receiptsnap-backend -p 3000:3000 --env-file /var/www/receiptsnap-backend/.env $IMAGE
