--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2 with Docker
+name: Build and Push Docker Image
 
 on:
   push:
@@ -6,12 +6,15 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -19,24 +22,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push Docker Image
+      - name: Create .env file
         run: |
-          IMAGE=${{ secrets.DOCKER_USERNAME }}/receiptsnap-backend:latest
-          docker build -t $IMAGE .
-          docker push $IMAGE
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
+          echo "PORT=3000" >> .env
+          echo "NODE_ENV=production" >> .env
 
-      - name: Deploy on EC2
-        uses: appleboy/ssh-action@v0.1.10
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            IMAGE=${{ secrets.DOCKER_USERNAME }}/receiptsnap-backend:latest
-            sudo apt update && sudo apt install -y docker.io
-            sudo systemctl enable docker
-            sudo systemctl start docker
-            sudo docker pull $IMAGE
-            sudo docker stop receiptsnap-backend || true
-            sudo docker rm receiptsnap-backend || true
-            sudo docker run -d --name receiptsnap-backend -p 3000:3000 --env-file /var/www/receiptsnap-backend/.env $IMAGE
+          context: .
+          push: true
+          tags: your-dockerhub-username/receiptsnap-backend:latest
