--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: pratik05/receiptsnap-backend:latest
+          tags: pratik50/receiptsnap-backend
