--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,6 @@
 name: Build and Push Docker Image
 
+# Trigger workflow on push to main branch
 on:
   push:
     branches:
@@ -10,28 +11,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout repo code
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 2️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # 3️⃣ Docker login using GitHub Secrets
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Create .env file
+      # 4️⃣ Create .env file dynamically from GitHub Secrets
+      - name: Create .env file from GitHub Secrets
         run: |
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
-          echo "PORT=3000" >> .env
-          echo "NODE_ENV=production" >> .env
+          echo "PORT=${{ secrets.PORT }}" >> .env
+          echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
 
+      # 5️⃣ Build and push Docker image to Docker Hub
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: pratik50/receiptsnap-backend
+          tags: pratik05/receiptsnap-backend:latest
+
