--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
-name: Build and Push Docker Image
+name: Continuous Deployment (Prod) (Backend)
 
-# Trigger workflow on push to main branch
 on:
   push:
     branches:
@@ -15,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2️⃣ Set up Docker Buildx for advanced builds
+      # 2️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -34,10 +33,10 @@ jobs:
           echo "PORT=${{ secrets.PORT }}" >> .env
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
 
-      # 5️⃣ Build and push Docker image to Docker Hub
+      # 5️⃣ Build and push Docker image with SHA tag
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: pratik05/receiptsnap-backend
+          tags: pratik05/receiptsnap-backend:${{ github.sha }}
