--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,6 @@ jobs:
           push: true
           tags: pratik50/receiptsnap-backend:${{ github.sha }}
       - run: |
-          sudo echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
+          sudo echo "${{ secrets.SSH_PRIVATE_KEY }}" &> sudo ~/ssh_key
           sudo chmod 700 /home/ubuntu/ssh_key
           sudo ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@13.232.100.125 -t "sudo docker stop user_backend && sudo docker run --name user_backend -d -p 8080:8080 100xdevs/user-app-backend:${{ github.sha }}"
